--- a/cloudflare-drizzle-neon/package.json
+++ b/cloudflare-drizzle-neon/package.json
@@ -21,6 +21,7 @@
     "@neondatabase/serverless": "^0.7.2",
     "drizzle-orm": "^0.31.2",
     "hono": "^3.12.2",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "zod": "^3.23.8"
   }
 }
